# goblin-camp-legacy

./: .gitignore  README.md  author_map
goblin-camp/: CMakeLists.txt  CMakePresets.json  Folder.DotSettings  goblin-camp.rc  goblin-camp.version.h.in  vcpkg.json
goblin-camp/src/: Camp.cpp  Construction.cpp  Container.cpp  Faction.cpp  Faction.hpp  Farmplot.cpp  GCamp.cpp  Game.cpp  Game.hpp  Logger.cpp  Logger.hpp  Map.cpp  Map.hpp  NPC.cpp  NPC.hpp  Random.hpp  SpawningPool.cpp  Stockpile.cpp  UI.cpp  Version.cpp  Version.hpp  stdafx.hpp
goblin-camp/src/data/: Config.cpp  Data.cpp  Mods.cpp  Paths.cpp
goblin-camp/src/platform/windows/: CrashHandler.cpp  DebugImpl.cpp
goblin-camp/src/tileRenderer/: Sprite.hpp
goblin-camp/src/tileRenderer/ogl/: OGLTilesetRenderer.cpp
